# CG_2021

./: NONAME00.CPP
L1/: Makefile  line.cpp  line.h  main.cpp  ЛР1_КГ.pages
L2/: line.cpp  main.cpp  triangle  triangle.cpp  triangle.h
L3/: Makefile  line.cpp  line.h  main.cpp  triangle  triangle.cpp  triangle.h
L4/: CMakeLists.txt  line.cpp  line.h  main.cpp  matrix.cpp  matrix.h  pyramid.cpp  pyramid.h  triangle  triangle.cpp  triangle.h
L5/: CMakeLists.txt  Makefile  line.cpp  line.h  main.cpp  matrix.cpp  pyramid.cpp  pyramid.h  triangle  triangle.cpp  triangle.h
